# FacialAgeSynthesis

./: .gitignore  CLM_framework.sln  CMakeLists.txt  Copyright.txt  README.md  Readme.txt  Results_clm_feats.txt  Results_clm_pose.txt  readme-ubuntu.txt
AgeSynthesis/: AgeEstModel.cpp  AgeEstModel.h  AgeSynthModel.cpp  AgeSynthModel.h  AgeSynthesis.vcxproj  AgeingModel.cpp  (+13 more)
lib/local/CLM/: CLM.vcxproj  CLM.vcxproj.filters  CMakeLists.txt
lib/local/CLM/include/: CCNF_patch.h  CLM.h  Det_valid.h  IO.h  PAW.h  PDM.h  Patch_expert.h  TrackerCLM.h
lib/local/CLM/model/: Multi-PIE_aligned_PDM_68.txt  clm.txt  clm_svr.txt  clm_svr_ml.txt  clm_svr_wild.txt  clm_wild.txt  colour_patches_0.25_V250.txt  colour_patches_0.25_V502.txt  colour_patches_0.35_V250.txt  colour_patches_0.35_V502.txt  colour_patches_0.5_V250.txt  colour_patches_0.5_V502.txt  face_check_pie.txt  face_check_wild.txt  main.txt  main_svr.txt  main_svr_ml.txt  main_svr_ml_wild.txt  main_wild.txt  tris_68.txt
lib/local/CLM/src/: CCNF_patch.cpp  CLM.cpp  Det_valid.cpp  IO.cpp  PAW.cpp  PDM.cpp  Patch_expert.cpp  TrackerCLM.cpp
lib/local/CLMWrapper/: CLMWrapper.vcxproj  CLMWrapper.vcxproj.filters  CMakeLists.txt
lib/local/CLMWrapper/include/: CLMParameters.h  CLMTracker.h
lib/local/CLMWrapper/src/: CLMParameters.cpp  CLMTracker.cpp
lib/local/PoseDetectorHaar/: CMakeLists.txt  PoseDetectorHaar.vcproj  PoseDetectorHaar.vcxproj  PoseDetectorHaar.vcxproj.filters
lib/local/PoseDetectorHaar/include/: PoseDetectorHaar.h  PoseDetectorHaarParameters.h
lib/local/PoseDetectorHaar/src/: PoseDetectorHaar.cpp
(+221 files in other folders)
